--- a/tcf_website/templates/base/components/notification.html
+++ b/tcf_website/templates/base/components/notification.html
@@ -6,18 +6,19 @@ Can be repurposed for any announcement (e.g. recruitment, fundraising, review dr
 
 <div id="notification-panel" role="alert"
      class="alert alert-info alert-dismissible text-left mb-5 fade show">
-  <h4 class="alert-heading">Donate to theCourseForum!</h4>
-  <p>
-    theCourseForum keep our servers running through university grants and your donations. Just $4 keeps our servers up for a day, so we can keep serving you the best content.
-  </p>
-  <hr>
-  <p class="mb-0 text-inline">
-    <a href="https://gf.me/u/yvhyfa" class="btn btn-sm btn-info">
-      Donate $4 today <i class="fa fa-arrow-right" aria-hidden="true"></i>
-    </a>
-  </p>
+    <h4 class="alert-heading">Donate to theCourseForum!</h4>
+    <p>
+        theCourseForum keep our servers running through university grants and your donations. Just $4 keeps our servers
+        up for a day, so we can keep serving you the best content.
+    </p>
+    <hr>
+    <p class="mb-0 text-inline">
+        <a href="https://gf.me/u/yvhyfa" class="btn btn-sm btn-info">
+            Donate $4 today <i class="fa fa-arrow-right" aria-hidden="true"></i>
+        </a>
+    </p>
 
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
 </div>
