--- a/tcf_website/templates/profile/profile.html
+++ b/tcf_website/templates/profile/profile.html
@@ -9,35 +9,36 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid">
-    <div class="row d-flex flex-column align-items-center">
-        <h2>Profile</h2>
-        <div class="card col-12 col-sm-9 col-md-9 col-xl-6 mt-3 px-0">
-            <img class="card-img-top bg-dark" src="{% static 'base/img/alderman-and-peabody.jpg' %}" style="filter: brightness(150%) contrast(75%)">
-            <div class="card-body">
-                <h4 class="card-title"><i class="far fa-edit"></i> My Details</h4>
-                <form method="POST" action="{% url 'profile' %}" id="ProfileForm">
-                    {% csrf_token %}
-                    <div class="form-row">
-                        <div class="col-12 col-lg-4 ">
-                            {{ form.first_name.label_tag }}
-                            {{ form.first_name }}
-                            <small id="first_name" class="form-text text-muted">Your name is never public.</small>
+    <div class="container-fluid">
+        <div class="row d-flex flex-column align-items-center">
+            <h2>Profile</h2>
+            <div class="card col-12 col-sm-9 col-md-9 col-xl-6 mt-3 px-0">
+                <img class="card-img-top bg-dark" src="{% static 'base/img/alderman-and-peabody.jpg' %}"
+                     style="filter: brightness(150%) contrast(75%)">
+                <div class="card-body">
+                    <h4 class="card-title"><i class="far fa-edit"></i> My Details</h4>
+                    <form method="POST" action="{% url 'profile' %}" id="ProfileForm">
+                        {% csrf_token %}
+                        <div class="form-row">
+                            <div class="col-12 col-lg-4 ">
+                                {{ form.first_name.label_tag }}
+                                {{ form.first_name }}
+                                <small id="first_name" class="form-text text-muted">Your name is never public.</small>
+                            </div>
+                            <div class="col-12 col-lg-4 ">
+                                {{ form.last_name.label_tag }}
+                                {{ form.last_name }}
+                            </div>
+                            <div class="col-12 col-lg-4 ">
+                                {{ form.graduation_year.label_tag }}
+                                {{ form.graduation_year }}
+                            </div>
                         </div>
-                        <div class="col-12 col-lg-4 ">
-                            {{ form.last_name.label_tag }}
-                            {{ form.last_name }}
-                        </div>
-                        <div class="col-12 col-lg-4 ">
-                            {{ form.graduation_year.label_tag }}
-                            {{ form.graduation_year }}
-                        </div>
-                    </div>
-                    <input type="submit" class="btn btn-primary mt-3" value="Save Profile">
-                </form>
+                        <input type="submit" class="btn btn-primary mt-3" value="Save Profile">
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock %}
 
