--- a/tcf_website/templates/course/course_instructor.html
+++ b/tcf_website/templates/course/course_instructor.html
@@ -2,7 +2,7 @@
 {# Displays reviews/grade data for a particular course taught by an instructor. #}
 {% load static %}
 
-{% block title %}{{course.code}} - {{instructor.full_name}} - theCourseForum{% endblock %}
+{% block title %}{{ course.code }} - {{ instructor.full_name }} - theCourseForum{% endblock %}
 
 {% block styles %}
     <link rel="stylesheet" href="{% static 'course/course_professor.css' %}"/>
@@ -24,36 +24,37 @@
 
                 <div class="instructor-info d-flex flex-sm-row flex-column align-items-baseline">
 
-                  <div class="d-flex flex-row">
-                    <!-- Instructor page link -->
-                    <a class="instructor-profile align-self-center mr-3"
-                       href="{% url 'instructor' instructor_id=instructor.id %}">
-                      <h4 class="m-0 text-tcf-indigo"
-                          tabindex="0" data-toggle="tooltip" data-placement="bottom"
-                          title="View instructor profile">
-                        <i class="fa fa-user" aria-hidden="true"></i>
-                      </h4>
-                    </a>
+                    <div class="d-flex flex-row">
+                        <!-- Instructor page link -->
+                        <a class="instructor-profile align-self-center mr-3"
+                           href="{% url 'instructor' instructor_id=instructor.id %}">
+                            <h4 class="m-0 text-tcf-indigo"
+                                tabindex="0" data-toggle="tooltip" data-placement="bottom"
+                                title="View instructor profile">
+                                <i class="fa fa-user" aria-hidden="true"></i>
+                            </h4>
+                        </a>
 
-                    <!-- Instructor Dropdown -->
-                    <div class="instructor dropdown">
-                      <a class="instructor-select btn btn-lg text-tcf-orange p-0 dropdown-toggle" href="#"
-                         role="button" id="dropdownMenuLink" data-toggle="dropdown"
-                         aria-haspopup="true" aria-expanded="false">
-                         {{ instructor.last_name }}, {{ instructor.first_name }}
-                      </a>
+                        <!-- Instructor Dropdown -->
+                        <div class="instructor dropdown">
+                            <a class="instructor-select btn btn-lg text-tcf-orange p-0 dropdown-toggle" href="#"
+                               role="button" id="dropdownMenuLink" data-toggle="dropdown"
+                               aria-haspopup="true" aria-expanded="false">
+                                {{ instructor.last_name }}, {{ instructor.first_name }}
+                            </a>
 
-                      <div id="instructorMenu" class="instructor-menu dropdown-menu w-100" aria-labelledby="dropdownMenuLink" disabled>
-                        <!-- To be populated by instr_data.js script -->
-                      </div>
+                            <div id="instructorMenu" class="instructor-menu dropdown-menu w-100"
+                                 aria-labelledby="dropdownMenuLink" disabled>
+                                <!-- To be populated by instr_data.js script -->
+                            </div>
+                        </div>
                     </div>
-                  </div>
 
-                  <!-- Semester last taught -->
-                  <div class="ml-auto pl-5 btn-group text-center">
-                    <span class="p-2 bg-white">Last taught</span>
-                    <span class="p-2 bg-tcf-blue text-white">{{ semester_last_taught }}</span>
-                  </div>
+                    <!-- Semester last taught -->
+                    <div class="ml-auto pl-5 btn-group text-center">
+                        <span class="p-2 bg-white">Last taught</span>
+                        <span class="p-2 bg-tcf-blue text-white">{{ semester_last_taught }}</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -198,31 +199,36 @@
                 <h3 class="reviews-heading mb-0 mr-4">{{ reviews|length }} Comments</h3>
                 <div class="reviews-options d-flex flex-sm-row flex-column col p-0">
                     <a href="{% url 'new_review' %}" class="btn bg-tcf-orange text-white">
-                      <i class="fa fa-plus" aria-hidden="true"></i> Add your review!
+                        <i class="fa fa-plus" aria-hidden="true"></i> Add your review!
                     </a>
                     {% if reviews %}
-                    <!-- Show sorting options iff reviews exist -->
-                    <div class="ml-auto">
-                        <div class="dropdown btn-group ml-sm-4">
-                            <button class="btn bg-white" disabled>Sort by</button>
-                            <button id="review-sort-select" class="btn btn-primary dropdown-toggle" type="button" id="sortOptions"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-                            <div class="dropdown-menu" aria-labelledby="sortOptions">
-                                <button id="votes-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
-                                    Most Helpful
-                                </button>
-                                <button id="recent-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
-                                    Most Recent
-                                </button>
-                                <button id="highrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
-                                    Highest Rating
-                                </button>
-                                <button id="lowrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
-                                    Lowest Rating
-                                </button>
+                        <!-- Show sorting options iff reviews exist -->
+                        <div class="ml-auto">
+                            <div class="dropdown btn-group ml-sm-4">
+                                <button class="btn bg-white" disabled>Sort by</button>
+                                <button id="review-sort-select" class="btn btn-primary dropdown-toggle" type="button"
+                                        id="sortOptions"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                                <div class="dropdown-menu" aria-labelledby="sortOptions">
+                                    <button id="votes-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item"
+                                            type="button">
+                                        Most Helpful
+                                    </button>
+                                    <button id="recent-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item"
+                                            type="button">
+                                        Most Recent
+                                    </button>
+                                    <button id="highrating-sort-btn" onclick="sortReviews(this.id)"
+                                            class="dropdown-item" type="button">
+                                        Highest Rating
+                                    </button>
+                                    <button id="lowrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item"
+                                            type="button">
+                                        Lowest Rating
+                                    </button>
+                                </div>
                             </div>
                         </div>
-                    </div>
                     {% endif %}
                 </div>
             </div>
@@ -234,13 +240,15 @@
 {% block js %}
     <!-- For instructor data -->
     <script> // Create global js vars from template context vars
-       var courseID = "{{ course_id|escapejs }}";
+    var courseID = "{{ course_id|escapejs }}";
     </script>
     <script type="module" src="{% static 'course/javascript/instr_data.js' %}"></script>
 
     <!-- For Bootstrap tooltip -->
     <script>
-      $(function () { $('[data-toggle="tooltip"]').tooltip() })
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
     </script>
 
     <!-- For grade data -->
@@ -251,6 +259,7 @@
     <script type="module">
         // Run loaddata function from above script
         import {loadData} from "{% static 'course/javascript/course_data.js' %}";
+
         loadData(JSON.parse("{{ data|escapejs }}"))
     </script>
 
